# ImageProcessing

./: README.md
Assignment1/: main.cpp
Assignment1Megan/: main.cpp
Assignment1Submission/Assignment1 Code/: CMakeLists.txt  README.md  main.cpp
Assignment2/: CMakeLists.txt  main.cpp  output.txt
Assignment2/Assig2_Supp/: _DS_Store
Assignment2/Assig2_Supp/Q2-Thresholding-GT/: _DS_Store
Assignment2/Assig2_Supp/Q3-Images-GT/: _DS_Store
Assignment2Matlab/: demo1.m  demo2.m  demo2.m~
Assignment2Matlab/LevelSet/: license.txt
Assignment2Matlab/LevelSet/LevelSet/: Img_new.c  LevelSet.m  Seg2_Stim.c  Seg2_Stim.mexa64  gamma_seg.c  gauss_seg.c  gauss_vect_part_seg.c  gauss_vect_seg.c  ker_part_seg.c  ker_seg.c  levelset.c  levelset.h  levelutil.c  levelutil.h  mean_clust_seg.c  mean_part_seg.c  mean_seg.c  mean_vect_seg.c
Assignment2Matlab/LevelSet/LevelSet/Assig2_Supp/Q2-Thresholding/: _DS_Store
Assignment2Matlab/LevelSet/LevelSet/Assig2_Supp/Q3-Images/: _DS_Store
Assignment2Matlab/LevelSet/LevelSet/Images/: Result.tif  Thumbs.db
ChanVese/: CVoutEdges.pgm  CVoutRegions.pgm  segment
Midterm/: MidtermExam.aux  MidtermExam.dvi  MidtermExam.tex
